frontend/kubernetes/core-engine-frontend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-engine-frontend-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8181
      targetPort: 80
      protocol: TCP
  selector:
    app: core-engine-frontend
