frontend/kubernetes/frontend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8181
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
