frontend/kubernetes/core-engine-frontend.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-engine-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: frontend-core-engine-swiss-ai-center.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  tls:
    - hosts:
        - frontend-core-engine-swiss-ai-center.kube.isc.heia-fr.ch
